# kpl

./: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  audiofile.cpp  audiofile.h  build.sh  clean.sh  generated_tests
include/: chainedarray.h  eventnotifier.h  kfile.h  memberfunction.h  notifymemberfunction.h
include/kpl/: accessbridge.h  accessmodifier.h  algorithm.h  array.h  audiofile.h  chainedarray.h  class.h  core.h  datasource.h  datatype.h  eventsystem.h  filesystem.h  fixedstringbuffer.h  function.h  idgenerator.h  kdatabase.h  kfile.h  kjson.h  linkedbufferarray.h  logger.h  logicaldatatype.h  memberfunction.h  memberfunctor.h  membervariable.h  notifymemberfunction.h  pair.h  pointertype.h  referencetype.h  stack.h  string.h  util.h  variable.h
include/kpl/reflection/: accessmodifier.h  class.h  function.h  logicaldatatype.h  memberfunction.h  membervariable.h  variable.h
source/: algorithm.cpp  audiofile.cpp  database.cpp  eventsystem.cpp  filesystem-qt.cpp  fixedtbuffer.cpp  idgenerator.cpp  kfile.cpp  string.cpp  util.cpp
source/reflection/: accessmodifier.cpp  class.cpp  datatype.cpp  function.cpp  logicaldatatype.cpp  memberfunction.cpp  membervariable.cpp  variable.cpp
src/: accessbridge.cpp  accessmodifier.cpp  class.cpp  container.h  datatype.cpp  eventsystem.cpp  fixedstringbuffer.cpp  fixedstringbuffer.h  fixedtbuffer.h  function.cpp  kdatabase.cpp  kfile.cpp  kjson.cpp  linkedbufferarray.cpp  linkedbufferarray.h  logger.cpp  logicaldatatype.cpp  memberfunction.cpp  membervariable.cpp  pair.cpp  pointertype.cpp  referencetype.cpp  saferef.cpp  saferef.h  util.cpp  variable.cpp
tests/: benchmark_chainedarray.cpp  compile.sh  compile_benchmarks.sh  kpl_benchmarks  kpl_tests  linkedBufferArrayTests.cpp  testChainedArray.cpp  testFixedStringBuffer.cpp  testFunction.cpp  testIDGenerator.cpp  testPair.cpp  testextras.h  testkdatabase.cpp  testkdatabase.h
